# dio-bank

./: pyproject.toml
migrations/versions/: 0a1ed1b0a957_initial_migration.py  6bd6e7fd6940_add_password_field.py
src/: app.py  config.py  utils.py
src/controllers/: auth.py  role.py  user.py
src/models/: base.py  post.py  role.py  user.py
src/views/: role.py  user.py
tests/integration/: conftest.py
tests/integration/controllers/: test_user.py
tests/unit/: test_utils.py
