[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["RenatoAkira <renatoakira@hotmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]  # <- Aqui está o jeito correto

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"
flask-sqlalchemy = "*"
flask-migrate = "*"
flask-jwt-extended = "*"
pytest = "*"
pytest-mock = "*"
psycopg2-binary = "*"
gunicorn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
